# embodied-ai-benchmark

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ACADEMIC_PUBLICATION_PACKAGE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.json  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.optimized  Dockerfile.prod  EMBODIED_AI_RESEARCH_SUMMARY.md  FINAL_ENHANCED_AUTONOMOUS_SDLC_COMPLETION_REPORT.json  FINAL_TERRAGON_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_ARTIFACTS_PUBLICATION.md  RESEARCH_PAPER_DRAFT.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_FINAL_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_SUMMARY.md  TERRAGON_COMPLETION_SUMMARY.md  TERRAGON_DEPLOYMENT_GUIDE.md  TERRAGON_FINAL_SUMMARY.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  TERRAGON_PRODUCTION_DEPLOYMENT_GUIDE.md  advanced_performance_optimization.py  alert_rules.yml  (+102 more)
.devcontainer/: devcontainer.json
docs/: ROADMAP.md
docs/adr/: 0001-architecture-decision-record-template.md
fresh_env/: pyvenv.cfg
src/embodied_ai_benchmark/: __init__.py
src/embodied_ai_benchmark/agents/: base.py  bfs_agent.py  instruction_agent.py  random_agent.py
src/embodied_ai_benchmark/api/: __init__.py  app.py  middleware.py  routes.py  validation.py
src/embodied_ai_benchmark/cache/: __init__.py  cache_manager.py
src/embodied_ai_benchmark/cli/: __init__.py  main.py
src/embodied_ai_benchmark/core/: __init__.py  base_agent.py  base_env.py  base_metric.py  base_task.py
src/embodied_ai_benchmark/curriculum/: __init__.py  emergent_curriculum.py  llm_curriculum.py
src/embodied_ai_benchmark/database/: __init__.py  connection.py  production_connection.py
src/embodied_ai_benchmark/distributed/: processing_framework.py
src/embodied_ai_benchmark/envs/: gridworld.py
src/embodied_ai_benchmark/evaluation/: __init__.py  benchmark_suite.py  cross_simulator_benchmark.py  evaluator.py  long_horizon_benchmark.py  runner.py
src/embodied_ai_benchmark/language/: __init__.py  language_interface.py  llm_integration.py
src/embodied_ai_benchmark/locales/: en_US.json  es_ES.json  zh_CN.json
src/embodied_ai_benchmark/monitoring/: production_monitoring.py
src/embodied_ai_benchmark/multiagent/: __init__.py  coordination_protocols.py  multi_agent_benchmark.py
src/embodied_ai_benchmark/optimization/: performance_engine.py
src/embodied_ai_benchmark/physics/: __init__.py  adaptive_physics.py  physics_config.py
src/embodied_ai_benchmark/repositories/: __init__.py  base_repository.py  experiment_repository.py
src/embodied_ai_benchmark/research/: __init__.py  adaptive_optimization.py  advanced_optimizations.py  comprehensive_monitoring.py  comprehensive_validation_pipeline.py  distributed_processing_engine.py  dynamic_attention_fusion.py  emergent_communication.py  emergent_swarm_coordination.py  hierarchical_task_decomposition.py  meta_learning_maml_plus.py  multimodal_sensory_fusion.py  neural_physics.py  quantum_curriculum.py  quantum_enhanced_planning.py  real_time_adaptive_physics.py  research_framework.py  robust_validation_framework.py  security_hardening.py
src/embodied_ai_benchmark/scaling/: auto_scaling_engine.py
src/embodied_ai_benchmark/sdlc/: __init__.py  advanced_ml_engine.py  autonomous_orchestrator.py  autonomous_resilience_engine.py  autonomous_testing_engine.py  cicd_automation.py  code_generator.py  doc_generator.py  integration_tests.py  observability_engine.py  performance_optimization_engine.py  project_orchestrator.py  quality_assurance.py  quantum_orchestration_engine.py  requirements_engine.py  security_hardening_engine.py  security_monitor.py
src/embodied_ai_benchmark/security/: security_framework.py
tests/: __init__.py  conftest.py  factories.py  test_agents.py  test_benchmark_runner.py  test_benchmark_suite.py  test_gridworld.py  test_performance.py  test_research_integration.py  test_security.py  test_tasks.py
tests/integration/: __init__.py  test_api.py  test_benchmark_workflow.py  test_full_system.py
tests/unit/: test_concurrent_execution.py  test_core.py  test_error_handling.py  test_evaluation.py  test_llm_curriculum.py  test_multiagent_coordination.py  test_quantum_planning.py  test_repositories.py  test_research_components.py  test_tasks.py
work_env/: pyvenv.cfg
(+41 files in other folders)
